chore: Update Privacy Policy

--- a/index.html
+++ b/index.html
@@ -207,18 +207,18 @@
   </section>
 
   <!-- Demo video embed (same video, reused) -->
-  <div class="video-container" aria-label="Demo video of ID card generation">
-    <iframe
-            src="https://www.youtube-nocookie.com/embed/zKTNXUA7lWI?rel=0&showinfo=0"
-            title="ID Card Generator Demo Video"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-    ></iframe>
-  </div>
+<!--  <div class="video-container" aria-label="Demo video of ID card generation">-->
+<!--    <iframe-->
+<!--            src="https://www.youtube-nocookie.com/embed/zKTNXUA7lWI?rel=0&showinfo=0"-->
+<!--            title="ID Card Generator Demo Video"-->
+<!--            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"-->
+<!--            allowfullscreen-->
+<!--    ></iframe>-->
+<!--  </div>-->
 
-  <p class="subheading animate__animated animate__fadeInUp">
-    ✨ Whether you're creating IDs for a school, company, event, or organization — this tool has everything you need in one place.
-  </p>
+<!--  <p class="subheading animate__animated animate__fadeInUp">-->
+<!--    ✨ Whether you're creating IDs for a school, company, event, or organization — this tool has everything you need in one place.-->
+<!--  </p>-->
 
   <div class="cta animate__animated animate__zoomIn">
     <p><strong>💼 Fast. Flexible. Powerful.</strong></p>
