chore: Update Appname

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -78,7 +78,7 @@
 <div class="container">
   <h1>Privacy Policy</h1>
   <p><strong>Effective Date:</strong> August 5, 2025</p>
-  <p><strong>App Name:</strong> ID Card Generator</p>
+  <p><strong>App Name:</strong> ID Maker</p>
 
   <section>
     <h2>1. No Account or Login Required</h2>
@@ -135,7 +135,7 @@
   </section>
 
   <div class="footer">
-    &copy; 2025 ID Card Generator. All rights reserved.
+    &copy; 2025 ID Maker. All rights reserved.
   </div>
 </div>
 </body>
