--- a/index.html
+++ b/index.html
@@ -144,8 +144,21 @@
       outline: none;
     }
   </style>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+    .banner {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+  </style>
 </head>
 <body>
+<img src="banner.jpg" alt="ID Maker Banner" class="banner">
+
 <main class="container" role="main">
   <h1 class="headline animate__animated animate__fadeInDown">🎉 Revolutionize the Way You Create ID Cards! 🪪</h1>
   <p class="subheading animate__animated animate__fadeInUp">
